prevent text overflow causing container widening - apis page was problem

--- a/src/components/Layout/Page/Page.scss
+++ b/src/components/Layout/Page/Page.scss
@@ -48,6 +48,19 @@ header {
     padding: 0px 1.0875rem 1.45rem;
     margin-top: 1rem;
     flex: 1;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
 
 footer {
